--- a/client/app/components/materialPlanningEP/materialPlanningEP.component.html
+++ b/client/app/components/materialPlanningEP/materialPlanningEP.component.html
@@ -2,7 +2,7 @@
     <h2 style="margin-bottom: 20px; margin-top: 0px;">{{'mpEP_MaterialPlanningEP' | translate}}</h2>
     <div id="bc1" class="myBreadcrumb">
         <a class="completed" routerLink="/xmlImport"><div>{{'xmlImport' | translate}}</div></a>
-        <a class="completed" routerLink="/prediction"><div>{{'prediction_planning' | translate}}</div></a>
+        <a class="completed" routerLink="/forecast"><div>{{'prediction_planning' | translate}}</div></a>
         <a class="completed" routerLink="/materialPlanning"><div>{{'material_Planning' | translate}}</div></a>
         <a class="active" routerLink="//materialPlanningEP"><div>{{'mpEP_MaterialPlanningEP' | translate}}</div></a>
         <a class="" routerLink="/prioritization"><div>{{'sidebar_prio' | translate}}</div></a>
