--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -19,7 +19,7 @@
 
             </li>
             <li class="sidebar-list">
-                <a routerLink="/prediction" routerLinkActive="active">{{'sidebar_forecast' | translate}}<span class="menu-icon fa fa-line-chart"></span></a>
+                <a routerLink="/forecast" routerLinkActive="active">{{'sidebar_forecast' | translate}}<span class="menu-icon fa fa-line-chart"></span></a>
             </li>
             <li class="sidebar-list">
                 <a routerLink="/tasks" routerLinkActive="active">{{'sidebar_task' | translate}}<span class="menu-icon fa fa-check-square-o"></span></a>
