--- a/client/app/components/prio/prio.component.html
+++ b/client/app/components/prio/prio.component.html
@@ -57,11 +57,25 @@
                 </div>
             </div>
         </div>
+        <div class="col-sm-3" *ngIf="nPAuftraege.length !== 0">
+            <div class="panel panel-danger">
+                <div class="panel-heading">
+                    Nicht Produzierbar:
+                </div>
+                <div class="panel-body">
+                    <ul class="list-group">
+                        <li *ngFor="let item of nPAuftraege; let i = index" class="list-group-item">
+                            <span class="tag tag-default pull-right">{{item.Anzahl}}</span>
+                            {{item.Teil.typ}} {{item.Teil.nummer}}
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <div *ngIf="(selector == 'endProduct')" class="container">
     <h4>Nach Endprodukten:</h4>
-    <button class="btn btn-success">start process</button>
     <div class="row">
         <div class="col-sm-3">
             <div class="panel panel-success">
@@ -69,7 +83,7 @@
                     Endprodukte:
                 </div>
                 <div class="panel-body">
-                    <ul class="list-group" dnd-sortable-container [sortableData]="pParts">
+                    <ul class="list-group" dnd-sortable-container [sortableData]="pParts" (dragend)="reloadProcess()">
                         <li *ngFor="let item of pParts; let i = index" class="list-group-item" dnd-sortable [sortableIndex]="i">{{i + 1}}. {{item.typ}} {{item.nummer}}</li>
                     </ul>
                 </div>
@@ -78,16 +92,35 @@
         <div class="col-sm-3">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    My priorization:<br/>
-                    <span *ngFor="let item of pParts; let i = index">{{i + 1}}) {{item.typ}} {{item.nummer}} ({{item.bezeichnung}})<br/></span>
+                    <ul class="list-group" dnd-sortable-container [sortableData]="produzierbareAuftraege">
+                        <li *ngFor="let item of produzierbareAuftraege; let i = index" class="list-group-item">
+                            <span class="tag tag-default pull-right">{{item.Anzahl}}</span><button class="btn btn-xs pull-right" style="margin-right: 10" (click)="setModalView(item, i)">+</button>
+                            {{item.Teil.typ}} {{item.Teil.nummer}}
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
         <div class="col-sm-3">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    Leerzeiten:<br/>
-                    <span> 10000 Minuten<br/></span>
+                    My priorization:<br/>
+                    <span *ngFor="let item of produzierbareAuftraege; let i = index">{{i + 1}}) {{item.Teil.typ}} {{item.Teil.nummer}} ({{item.Teil.bezeichnung}})<br/></span>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3" *ngIf="nPAuftraege.length !== 0">
+            <div class="panel panel-danger">
+                <div class="panel-heading">
+                    Nicht Produzierbar:
+                </div>
+                <div class="panel-body">
+                    <ul class="list-group">
+                        <li *ngFor="let item of nPAuftraege; let i = index" class="list-group-item">
+                            <span class="tag tag-default pull-right">{{item.Anzahl}}</span>
+                            {{item.Teil.typ}} {{item.Teil.nummer}}
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -95,7 +128,6 @@
 </div>
 <div *ngIf="(selector == 'manual')" class="container">
     <h4>Alles Manuell:</h4>
-    <button class="btn btn-success">start process</button>
     <div class="row">
         <div class="col-sm-3">
             <div class="panel panel-success">
@@ -114,6 +146,21 @@
                 <div class="panel-body">
                     My priorization:<br/>
                     <span *ngFor="let item of epParts; let i = index">{{i + 1}}) {{item.typ}} {{item.nummer}} ({{item.bezeichnung}})<br/></span>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3" *ngIf="nPAuftraege.length !== 0">
+            <div class="panel panel-danger">
+                <div class="panel-heading">
+                    Nicht Produzierbar:
+                </div>
+                <div class="panel-body">
+                    <ul class="list-group">
+                        <li *ngFor="let item of nPAuftraege; let i = index" class="list-group-item">
+                            <span class="tag tag-default pull-right">{{item.Anzahl}}</span>
+                            {{item.Teil.typ}} {{item.Teil.nummer}}
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
