--- a/client/app/components/forecast/forecast.component.html
+++ b/client/app/components/forecast/forecast.component.html
@@ -16,19 +16,19 @@
             <thead>
             <tr>
                 <th class="text-center" colspan="100%">
-                    Verbindliche Aufträge
+                    {{'forecast_sales' | translate}}
                 </th>
             </tr>
             <tr>
-                <th> Teil </th>
+                <th>{{'forecast_product' | translate}}</th>
                 <th *ngFor="let period of periods">
-                    Periode {{period}}
+                    {{'forecast_period' | translate}} {{period}}
                 </th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let part of pParts">
-                <td>{{part.bezeichnung}}</td>
+                <td>{{part.typ + part.nummer}}</td>
                 <td *ngFor="let period of periods">
                     <input type="number" min="0" class="form-control" [(ngModel)]="verbdindlAuftr['P_' + part.nummer + '_' + period]" (ngModelChange)="updateArrays(part.nummer,period)">
                 </td>
@@ -41,19 +41,19 @@
             <thead>
             <tr>
                 <th class="text-center" colspan="100%">
-                    Geplante Produktion
+                    {{'forecast_plProd' | translate}}
                 </th>
             </tr>
             <tr>
-                <th> Teil </th>
+                <th>{{'forecast_product' | translate}}</th>
                 <th *ngFor="let period of periods">
-                    Periode {{period}}
+                    {{'forecast_period' | translate}} {{period}}
                 </th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let part of pParts">
-                <td>{{part.bezeichnung}}</td>
+                <td>{{part.typ + part.nummer}}</td>
                 <td *ngFor="let period of periods">
                     <input type="number" min="0" class="form-control" [(ngModel)]="geplProd['P_' + part.nummer + '_' + period]" (ngModelChange)="updateArrays(part.nummer,period)">
                 </td>
@@ -66,19 +66,19 @@
             <thead>
             <tr>
                 <th class="text-center" colspan="100%">
-                    Voraussichtlicher Restbestand
+                    {{'forecast_plRemStock' | translate}}
                 </th>
             </tr>
             <tr>
-                <th> Teil </th>
+                <th> {{'forecast_product' | translate}} </th>
                 <th *ngFor="let period of periods">
-                    Periode {{period}}
+                    {{'forecast_period' | translate}} {{period}}
                 </th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let part of pParts">
-                <td>{{part.bezeichnung}}</td>
+                <td>{{part.typ + part.nummer}}</td>
                 <td *ngFor="let period of periods">
                     <input type="number" min="0" class="form-control" readonly [(ngModel)]="vorausBestand['P_' + part.nummer + '_' + period]">
                 </td>
@@ -93,19 +93,19 @@
             <thead>
             <tr>
                 <th class="text-center" colspan="100%">
-                    Direktverkauf
+                    {{'forecast_directSales' | translate}}
                 </th>
             </tr>
             <tr>
-                <th> Teil </th>
-                <th> Menge </th>
-                <th> Preis </th>
-                <th> Konventionalstafe </th>
+                <th> {{'forecast_product' | translate}} </th>
+                <th> {{'forecast_quantity' | translate}} </th>
+                <th> {{'forecast_price' | translate}} </th>
+                <th> {{'forecast_conPenalty' | translate}} </th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let part of pParts">
-                <td>{{part.bezeichnung}}</td>
+                <td>{{part.typ + part.nummer}}</td>
                 <th> <input type="number" min="0" class="form-control" [(ngModel)]="menge['P_' + part.nummer]" (ngModelChange)="saveForecast()"> </th>
                 <th> <input type="number" min="0" class="form-control" [(ngModel)]="preis['P_' + part.nummer]" (ngModelChange)="saveForecast()"> </th>
                 <th> <input type="number" min="0" class="form-control" [(ngModel)]="strafe['P_' + part.nummer]" (ngModelChange)="saveForecast()"> </th>
