--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -80,7 +80,8 @@
         <td class="text-center" *ngFor="let b of m.bruttobedarfnP">{{b}}</td>
         <td class="text-center" [ngClass]="{redlining: m.isneg}">{{m.mengeohbest}}</td>
         <td class="text-center" [ngClass]="{redlining: m.isneg2}">{{m.mengemitbest}}</td>
-        <td><input class="form-control" [value]="m.bestellmenge" type="number" min="0" (input)="bestellmengeChange($event.target.value, i)"></td>
+        <td><input type="number" min="0" class="form-control" [(ngModel)]="m.bestellmenge"
+                   (ngModelChange)="bestellmengechange(matPlan, i)"></td>
         <td>
             <div width="100%" class="btn-group">
                 <button type="button" class="btn .btn-block .btn-primary dropdown-toggle" data-toggle="dropdown"
@@ -99,5 +100,5 @@
     </tr>
     </tbody>
 </table>
-<button type="button" class="btn-lg btn-primary" (click)="clearSession()"> Reset Session</button>
+<button type="button" class="btn-lg btn-primary" (click)="clearSession()">Reset Session</button>
 </body>
