--- a/client/app/components/tasks/tasks.component.html
+++ b/client/app/components/tasks/tasks.component.html
@@ -1,4 +1,5 @@
 <form class="well" (submit)="addTask($event)">
+    <h1>{{'task_todoList' | translate}}</h1>
     <div class="form-group">
         <input type="text" [(ngModel)]="title" name="title" class="form-control" placeholder="Add Task">
     </div>
