comma validation, change sidebar order

--- a/client/app/components/prio/prio.component.html
+++ b/client/app/components/prio/prio.component.html
@@ -172,7 +172,7 @@
     </modal-header>
     <modal-body>
         <div class="well">
-            <label>Teil ID: {{splittingPart.nummer}} - Anzahl: {{splittingAnzahl2 - splittingAnzahl}}</label>
+            <label>Teil ID: {{splittingPart.nummer}} - Anzahl: {{round(splittingAnzahl2 - splittingAnzahl)}}</label>
 
             <div class="form-group">
                 <label>Anzahl des neuen Auftrags:</label>
