--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -10,9 +10,7 @@
             <li class="sidebar-title"><span>{{'sidebar_taskPlanning' | translate}}</span></li>
 
             <li class="sidebar-list">
-
                 <a routerLink="/xmlImport" routerLinkActive="active">{{'sidebar_readXML' | translate}}<span class="menu-icon fa fa-file-code-o"></span></a>
-
             </li>
             <li class="sidebar-list">
                 <a routerLink="/forecast" routerLinkActive="active">{{'sidebar_forecast' | translate}}<span class="menu-icon fa fa-line-chart"></span></a>
@@ -28,6 +26,9 @@
             </li>
             <li class="sidebar-list">
                 <a routerLink="/capacityPlanning" routerLinkActive="active">{{'sidebar_capacityPlanning' | translate}}<span class="menu-icon fa fa-battery-half"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a routerLink="/xmlExport" routerLinkActive="active">{{'xmlExport' | translate}}<span class="menu-icon fa fa-file-code-o"></span></a>
             </li>
             <li class="sidebar-title"><span>{{'sidebar_overview' | translate}}</span></li>
             <li class="sidebar-list">
