new node module !! to parse json 2 xml

--- a/client/app/components/xmlExport/xmlExport.component.html
+++ b/client/app/components/xmlExport/xmlExport.component.html
@@ -11,4 +11,4 @@
     </div>
 </div>
 
-<textarea class="fullScreenTextArea" [(ngModel)]="jsonString"></textarea>
+<textarea class="fullScreenTextArea" [(ngModel)]="displayString"></textarea>
