--- a/client/app/components/prio/prio.component.html
+++ b/client/app/components/prio/prio.component.html
@@ -144,6 +144,18 @@
         <div class="col-sm-3">
             <div class="panel panel-default">
                 <div class="panel-body">
+                    <ul class="list-group" dnd-sortable-container [sortableData]="produzierbareAuftraege">
+                        <li *ngFor="let item of produzierbareAuftraege; let i = index" class="list-group-item">
+                            <span class="tag tag-default pull-right">{{item.Anzahl}}</span><button class="btn btn-xs pull-right" style="margin-right: 10" (click)="setModalView(item, i)">+</button>
+                            {{item.Teil.typ}} {{item.Teil.nummer}}
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-body">
                     My priorization:<br/>
                     <span *ngFor="let item of epParts; let i = index">{{i + 1}}) {{item.typ}} {{item.nummer}} ({{item.bezeichnung}})<br/></span>
                 </div>
