--- a/client/app/components/xmlExport/xmlExport.component.html
+++ b/client/app/components/xmlExport/xmlExport.component.html
@@ -10,5 +10,5 @@
         <a class="active" routerLink="/xmlExport"><div>{{'xmlExport' | translate}}</div></a>
     </div>
 </div>
-
+<button class="btn btn-success" (click)="downloadFIle()"></button>
 <textarea class="fullScreenTextArea" [(ngModel)]="displayString"></textarea>
