--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -80,12 +80,12 @@
         <td class="text-center" *ngFor="let b of m.bruttobedarfnP">{{b}}</td>
         <td class="text-center" [ngClass]="{redlining: m.isneg}">{{m.mengeohbest}}</td>
         <td class="text-center" [ngClass]="{redlining: m.isneg2}">{{m.mengemitbest}}</td>
-        <td><input type="number" min="0" class="form-control" [(ngModel)]="m.bestellmenge"
-                   (ngModelChange)="bestellmengechange(matPlan, i, m.bestellmenge, m.bestandnWe, $event)"></td>
+        <td><input type="number" min="0" class="form-control" [ngModel]="m.bestellmenge"
+                   (ngModelChange)="bestellmengechange($event, i)"></td>
 
         <td>
             <div width="100%" class="btn-group">
-                <button type="button" class="btn .btn-block .btn-primary dropdown-toggle" data-toggle="dropdown"
+                <button type="button" class="btn btn-block btn-primary dropdown-toggle" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                     {{m.bestellung}}
                     <span class="caret"></span>
