--- a/client/app/components/xmlImport/xmlImport.component.css
+++ b/client/app/components/xmlImport/xmlImport.component.css
@@ -80,3 +80,24 @@
     margin-top: 20px;
     margin-bottom: 10px;
 }
+
+
+.SI-FILES-STYLIZED label.cabinet
+{
+    width: 79px;
+    height: 22px;
+
+    display: block;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.SI-FILES-STYLIZED label.cabinet input.file
+{
+    position: relative;
+    height: 100%;
+    width: auto;
+    opacity: 0;
+    -moz-opacity: 0;
+    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+}
