--- a/client/app/components/xmlImport/xmlImport.component.html
+++ b/client/app/components/xmlImport/xmlImport.component.html
@@ -23,11 +23,11 @@
         </div>
         <div class="col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading">Vorhandene Periode auswählen</div>
+                <div class="panel-heading">{{'xmlImport_periodenAuswahl' | translate}}</div>
                 <div class="panel-body">
                     <div class="btn-group">
                         <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Periode <span class="caret"></span>
+                            {{'period' | translate}} <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" >
                             <li *ngFor="let period of periods" class="text-center"><a (click)="periodSelected(period)">{{period}}</a></li>
@@ -39,25 +39,27 @@
     </div>
     <div class="row leftRightMargin">
         <div class="panel panel-success" [hidden]="!success">
-            <div class="panel-heading">Erfolgreich!</div>
+            <div class="panel-heading">{{'xmlImport_success' | translate}} </div>
             <div class="panel-body">
                 <span class="text-center">
-                    Periode {{(selectedPeriod)? selectedPeriod.period : "X"}} erfolgreich eingebunden!
+                    {{'period' | translate}} {{(selectedPeriod)? selectedPeriod.period : "X"}} {{'xmlImport_inbound' | translate}}
                 </span>
                 <a routerLink="/forecast" routerLinkActive="active">
                     <button class="btn pull-right btn-success">
-                        Fortfahren
+                        {{'xmlImport_proceed' | translate}}
                     </button>
                 </a>
             </div>
         </div>
         <div class="panel panel-danger" [hidden]="(success !== false)">
-            <div class="panel-heading">Fehler!</div>
+            <div class="panel-heading">{{'xmlImport_wrong' | translate}}</div>
             <div class="panel-body">
                 <span class="text-center">
-                    Die Periode wurde nicht richtig eingebunden!<br>
-                    {{(errorMessage)? errorMessage : ""}}<br>
-                    Bitte versuche es erneut oder wähle die Periode über das DropDown Menu.
+                    {{'xmlImport_periodRight' | translate}}<br>
+                    <span *ngIf="errorMessage">
+                        {{'period' | translate}} {{errorMessage}} {{'xmlImport_periodai' | translate}}
+                    </span><br>
+                    {{'xmlImport_periodwrong' | translate}}
                 </span>
             </div>
         </div>
