--- a/client/app/components/settings/workstations/workstations.component.html
+++ b/client/app/components/settings/workstations/workstations.component.html
@@ -36,7 +36,7 @@
                 {{ws.nummer}}
             </td>
             <td width="65%">
-                {{ws.name}}
+                {{ws.name | translate}}
             </td>
             <td width="12.5%" style="padding-right: 5px" align="right">
                 <input type="button"  value="{{'setWorkstations_edit' | translate}}"
